--- a/blocks/portfolio/style.scss
+++ b/blocks/portfolio/style.scss
@@ -28,6 +28,7 @@
 
         .gt-image {
             margin: 0;
+            overflow: hidden;
 
             img {
                 margin: 0;
